--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ addons:
     packages:
     - google-chrome-stable
 before_script:
-- npm install -g bower polymer-cli
+- npm install -g bower web-component-tester
 - bower prune
 - bower install
 script:
-- xvfb-run polymer test
-- if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then polymer test -s 'default'; fi
+- xvfb-run wct
+- if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then wct -s 'default'; fi
