--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
     "paper-chip": "Collaborne/paper-chip#^1.1.1",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5"
   }
 }
