--- a/bower.json
+++ b/bower.json
@@ -19,12 +19,12 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-item": "PolymerElements/paper-item#^1.2.1",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "iron-input": "PolymerElements/iron-input#^1.0.10",
     "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^1.1.7",
-    "paper-spinner": "PolymerElements/paper-spinner#^1.2.0"
+    "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
@@ -33,6 +33,7 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
     "paper-chip": "Collaborne/paper-chip#^1.1.1",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5"
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.2.5",
+    "paper-item": "PolymerElements/paper-item#^1.2.1"
   }
 }
